Closed Bug 1176506 Opened 10 years ago Closed 10 years ago

[e10s] Full black screen on any website

Categories

(Core :: Graphics, defect)

x86
Windows 7
defect
Not set
critical

Tracking

()

VERIFIED FIXED
mozilla41
Tracking Status
e10s ? ---
firefox41 + fixed

People

(Reporter: Towkir, Assigned: mattwoodrow)

References

Details

(Whiteboard: [Bugday-20150701])

Attachments

(4 files)

User Agent: Mozilla/5.0 (Windows NT 6.1; rv:41.0) Gecko/20100101 Firefox/41.0 Build ID: 20150620030209 Steps to reproduce: 1. Open Nightly on a fresh profile 2. Visit any website, (any site from new tab tiles or other sites) Actual results: The whole screen turns black. But any of the black screen looks fine on non e10s tabs. There is a strange behavior of twitter.com, this site shows its images only, no texts. See the links added in the comment Expected results: Any website was supposed to be shown properly without any (full) black screen
Here are the screenshots: Black Screen on any site: http://prntscr.com/7j9n2y The same site looks good on a non e10s window: http://prntscr.com/7j9nro Twitter.com has a strange behavior on e10s enabled tabs (no texts): http://prntscr.com/7j9pv4
Severity: normal → critical
Component: Untriaged → WinQual Reports
Attached image BlackScreenAnySite.png
Attached image TwitterWithOutTexts.png
Component: WinQual Reports → Untriaged
OS: Unspecified → Windows 7
Flags: needinfo?(towkir17)
(In reply to Loic from comment #5) > Could you test in safe mode, please. > https://support.mozilla.org/en-US/kb/troubleshoot-firefox-issues-using-safe- > mode > > In addition, try with HWA disabled: > https://support.mozilla.org/en-US/kb/forum-response-disable-hardware- > acceleration Yes Loic, I tried running in safe mode before reporting and now I have disabled Hardware Acceleration now, but its all the same , black screen , any site, only on e10s enabled widnows.
Flags: needinfo?(towkir17)
Same problem happening on Developer edition too, while e10s is enabled User Agent: Mozilla/5.0 (Windows NT 6.1; rv:40.0) Gecko/20100101 Firefox/40.0 Build ID: 20150620004006
I have this same problem too while running the x86 version using GeForce 6150 se and and processor while on 1 gb of ram(very old hardware that I don't currently have anymore so I don't remember the specifications). I have tried disabling hardware acceleration and running in safe mode. I will try e 10 with other old computers later.
Hardware: Unspecified → x86
I'm seeing this on Nightly, too. Safe mode doesn't fix it. There's a thread about this on Mozillazine too: http://forums.mozillazine.org/viewtopic.php?f=23&t=2942405 > I'm having the same issue, began with Friday's nightly (still exists through Sunday's build). > > Tried new profile, safe mode, et al -- did regression, appeared with the following hourly: > > Build ID 20150618061345 > Built from https://hg.mozilla.org/mozilla-central/rev/efe86609e776 > > The following (among others) appears in the error console: > > Error: operation not possible on dead CPOW > Source File: chrome://browser/content/tabbrowser.xml > Line: 542 > > Issue goes away if E10S disabled. > > Windows 7 but on an older laptop that doesn't have a real current GPU (ATI FireGL v5200).
I can confirm this issue running Firefox DevEd 40.0a2. STR: 0. environment: Win7-x64 inside VMware Workstation 10.0.5 build-2443746 1. upgrade to DevEd 40.0a2 2. open any page Expected: page loads property. Observed: black page. - disabling all add-ons made no difference. - disabling e10s fixed the problem.
Blocks: e10s
Component: Untriaged → Graphics
Product: Firefox → Core
There is a very similar bug report at https://bugzilla.mozilla.org/show_bug.cgi?id=1066226 Are they duplicates ? I experience the same behaviour since three nightly updates. I am running Firefox Developer Edition 40.0a2 (2015-06-22) presently on a Windows 7 professional 64 bit computer. While browser.tabs.remote.autostart;true and browser.tabs.remote.desktopbehavior;true I have this abnormal behaviour, When both are false, everything is back to normal. What information can I supply to help fix the issue ?
Since this is a recent regression, no. But who knows, the causes may be related.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Matt, I see this using my Windows 7 x64 VirtualBox VM using a fresh profile. The problems go away if I disable e10s.
Flags: needinfo?(matt.woodrow)
Oh, probably worth mentioning that I have the VirtualBox Guest Additions installed with the full hardware acceleration option (the one it warns against). Host card is a GeForce GTX 580. I can't test the other options because they lead to a black screen on startup (perhaps the full option doesn't uninstall cleanly, I dunno).
Can we have the about:support graphics from everybody that is having this fail? Is the original report also on a VM?
Flags: needinfo?(towkir17)
Flags: needinfo?(jmuizelaar)
Brad, we don't know what this is yet, but it could be non-graphics, so heads up - can you also have somebody try and chase this?
Flags: needinfo?(blassey.bugs)
Flags: needinfo?(dvander)
Graphics Adapter Description Intel(R) HD Graphics 3000 Adapter Drivers igdumd64 igd10umd64 igd10umd64 igdumdx32 igd10umd32 igd10umd32 Adapter RAM Unknown Asynchronous Pan/Zoom none Device ID 0x0126 Direct2D Enabled Blocked for your graphics driver version. DirectWrite Enabled false (6.2.9200.17292) Driver Date 12-22-2011 Driver Version 8.862.4.4000 GPU #2 Active false GPU Accelerated Windows 1/1 Direct3D 11 WARP (OMTC) Subsys ID 00000000 Supports Hardware H264 Decoding false Vendor ID 0x8086 WebGL Renderer Blocked for your graphics driver version. windowLayerManagerRemote true AzureCanvasBackend skia AzureContentBackend cairo AzureFallbackCanvasBackend cairo AzureSkiaAccelerated 0
My Notebook, a Sony Vaio VPCSB, comes with two graphics adapters. One (Intel) for stamina, the other (AMD) for speed. When switching to speed, the problem is gone. Also please note, that I am _not_ running Firefox in a VM. Below is the about:support:graphics for the speed mode. Graphics Adapter Description AMD Radeon(TM) HD 6630M Adapter Description (GPU #2) Intel(R) HD Graphics 3000 Adapter Drivers aticfx64 aticfx64 aticfx64 aticfx32 aticfx32 aticfx32 atiumd64 atidxx64 atidxx64 atiumdag atidxx32 atidxx32 atiumdva atiumd6a atitmm64 Adapter Drivers (GPU #2) igdumd64 igd10umd64 igd10umd64 igdumdx32 igd10umd32 igd10umd32 Adapter RAM 1024 Adapter RAM (GPU #2) Unknown Asynchronous Pan/Zoom none Device ID 0x6741 Device ID (GPU #2) 0x0126 Direct2D Enabled true DirectWrite Enabled true (6.2.9200.17292) Driver Date 12-22-2011 Driver Date (GPU #2) 12-22-2011 Driver Version 8.862.4.4000 Driver Version (GPU #2) 8.862.4.4000 GPU #2 Active false GPU Accelerated Windows 1/1 Direct3D 11 (OMTC) Subsys ID 00000000 Subsys ID (GPU #2) 00000000 Supports Hardware H264 Decoding true Vendor ID 0x1002 Vendor ID (GPU #2) 0x8086 WebGL Renderer Google Inc. -- ANGLE (AMD Radeon(TM) HD 6630M Direct3D11 vs_5_0 ps_5_0) windowLayerManagerRemote true AzureCanvasBackend direct2d 1.1 AzureContentBackend direct2d 1.1 AzureFallbackCanvasBackend cairo AzureSkiaAccelerated 0
(In reply to Milan Sreckovic [:milan] from comment #16) > Can we have the about:support graphics from everybody that is having this > fail? Is the original report also on a VM? Adapter Description Intel(R) G41 Express Chipset Adapter Drivers igdumdx32 igd10umd32 Adapter RAM Unknown Asynchronous Pan/Zoom none Device ID 0x2e32 DirectWrite Enabled false (6.2.9200.17292) Driver Date 10-4-2012 Driver Version 8.15.10.2869 GPU #2 Active false GPU Accelerated Windows 0/2 Basic (OMTC) Subsys ID 00000000 Supports Hardware H264 Decoding false Vendor ID 0x8086 WebGL Renderer Google Inc. -- ANGLE (Intel(R) G41 Express Chipset Direct3D9Ex vs_3_0 ps_3_0) windowLayerManagerRemote true AzureCanvasBackend skia AzureContentBackend cairo AzureFallbackCanvasBackend cairo AzureSkiaAccelerated 0
Flags: needinfo?(towkir17)
I am running Firefox on Windows Server 2008 R2 in a VM - VirtualBox 4.3.28. Guest additions are installed, with basic 3D acceleration support (not the WDDM support). Here's my about:support graphics: Adapter Description VirtualBox Graphics Adapter Adapter Drivers VBoxDisp Adapter RAM Unknown Asynchronous Pan/Zoom none Device ID 0xbeef Direct2D Enabled Blocked for your graphics card because of unresolved driver issues. DirectWrite Enabled false (6.2.9200.17292) Driver Date 5-13-2015 Driver Version 4.3.28.0 GPU #2 Active false GPU Accelerated Windows 1/1 Direct3D 11 WARP (OMTC) Subsys ID 00000000 Supports Hardware H264 Decoding false Vendor ID 0x80ee WebGL Renderer Blocked for your graphics card because of unresolved driver issues. windowLayerManagerRemote true AzureCanvasBackend skia AzureContentBackend cairo AzureFallbackCanvasBackend cairo AzureSkiaAccelerated 0 I seem to have Direct3D acceleration despite the driver being blocked?
Thanks all for about:support!
Here's mine. Windows 7 SP1 x64 not a VM. about:support graphics -- Adapter Description: ATI MOBILITY FireGL V5200 Adapter Drivers: atiumdag atiumdva atiumd64 atiumd6a atitmm64 Adapter RAM: Unknown Asynchronous Pan/Zoom: none ClearType Parameters: Gamma: 2200 Pixel Structure: R ClearType Level: 100 Enhanced Contrast: 300 Device ID: 0x71c4 Direct2D Enabled: Blocked for your graphics driver version. Try updating your graphics driver to version 9.6 or newer. DirectWrite Enabled: false (6.2.9200.17292) Driver Date: 12-1-2008 Driver Version: 8.561.0.0 GPU #2 Active: false GPU Accelerated Windows: 1/1 Direct3D 11 WARP (OMTC) Subsys ID: 202b17aa Supports Hardware H264 Decoding: false Vendor ID: 0x1002 WebGL Renderer: Blocked for your graphics driver version. Try updating your graphics driver to version 9.6 or newer. windowLayerManagerRemote: true AzureCanvasBackend: skia AzureContentBackend: cairo AzureFallbackCanvasBackend: cairo AzureSkiaAccelerated: 0
(In reply to Milan Sreckovic [:milan] from comment #16) > Can we have the about:support graphics from everybody that is having this > fail? Is the original report also on a VM? As requested. Additional data point: my Win7-x64 VMware session doesn't appear to be running Aero. My title bars are opaque. Adapter Description VMware SVGA 3D Adapter Drivers vm3dum64 vm3dum vm3dgl64 vm3dgl Adapter RAM 128 Asynchronous Pan/Zoom none Device ID 0x0405 Direct2D Enabled Blocked for your graphics card because of unresolved driver issues. DirectWrite Enabled false (6.2.9200.17292) Driver Date 10-28-2013 Driver Version 7.14.1.5026 GPU #2 Active false GPU Accelerated Windows 1/1 Direct3D 11 WARP (OMTC) Subsys ID 040515ad Supports Hardware H264 Decoding false Vendor ID 0x15ad WebGL Renderer Blocked for your graphics card because of unresolved driver issues. windowLayerManagerRemote true AzureCanvasBackend skia AzureContentBackend cairo AzureFallbackCanvasBackend cairo AzureSkiaAccelerated 0
Apologies for creating duplicate. Search on issue but must have either used wrong keywords or just missed it. First timer. Windows 7 Ultimate x64 Desktop NOT VM NOTE: any mention of "updating your graphics driver to version 9.6 or newer" is not possible for this graphics card. Adapter Description Radeon X1300/X1550 Series (Microsoft Corporation - WDDM) Adapter Drivers atiumdag atiumdva atiumd64 atiumd6a atitmm64 Adapter RAM Unknown Device ID 0x7187 Direct2D Enabled Blocked for your graphics driver version. Try updating your graphics driver to version 9.6 or newer. DirectWrite Enabled false (6.2.9200.17292) Driver Date 4-25-2009 Driver Version 8.56.1.16 GPU #2 Active false GPU Accelerated Windows 0/1 Basic (OMTC) Blocked for your graphics driver version. Try updating your graphics driver to version 9.6 or newer. Subsys ID 19961545 Vendor ID 0x1002 WebGL Renderer Blocked for your graphics driver version. Try updating your graphics driver to version 9.6 or newer. windowLayerManagerRemote true AzureCanvasBackend skia AzureContentBackend cairo AzureFallbackCanvasBackend cairo AzureSkiaAccelerated 0
Flags: needinfo?(blassey.bugs) → needinfo?(jmathies)
Jeff, the regression window is in comment #13 - this was caused by bug 1175366.
(In reply to Matt Woodrow (:mattwoodrow) from comment #29) > Can someone please test these builds to see if they are still broken: > > 1) > http://ftp.mozilla.org/pub/mozilla.org/firefox/try-builds/mwoodrow@mozilla. > com-3d445a3573d2/try-win32/ This one works on my VM! > 2) > http://ftp.mozilla.org/pub/mozilla.org/firefox/try-builds/mwoodrow@mozilla. > com-2e4186aec4d4/try-win32/ This one is even more broken than Nightly, drawing only the Aero glass but nothing else - no tabs, no address bar, nothing. The content area is transparent.
Flags: needinfo?(jmathies)
Assignee: nobody → matt.woodrow
(In reply to Matt Woodrow (:mattwoodrow) from comment #29) > Can someone please test these builds to see if they are still broken: > > 1) > http://ftp.mozilla.org/pub/mozilla.org/firefox/try-builds/mwoodrow@mozilla.com-3d445a3573d2/try-win32/ > > 2) > http://ftp.mozilla.org/pub/mozilla.org/firefox/try-builds/mwoodrow@mozilla.com-2e4186aec4d4/try-win32/ I get the same result for the two builds as report in Comment 30 on my Win7 x64 non-VM The regression build for Nightly channel is: Build ID 20150618061345 Built from https://hg.mozilla.org/mozilla-central/rev/efe86609e776
I believe I understand this now. It appears that calling DoesD3D11TextureSharingWork directly causes a device reset on the compositor device (which is the one we test). When we get a Windows OnPaint event we call UpdateRenderMode again, which will recreate the d3d11 devices and clear the reset state. Since we cache the result of DoesD3D11TextureSharingWork, we won't cause a driver reset this time around. Unfortunately on e10s, we don't get Windows events to the child process (as we use PuppetWidget), so we never recreate our device for that process and stay in the failed state forever. Affected users don't have direct2d (and we don't use the d3d11 compositor device for anything in the child process), so this shouldn't actually matter at all. However, ClientPaintedLayer::Render() checks for the failed state and skips painting layers if true, so we never draw. Things to fix: * Stop creating a compositor device in the child process. * Call UpdateRenderMode in the child process so we can recover from device resets. * Don't test texture sharing on WARP backed devices.
Flags: needinfo?(jmuizelaar)
Flags: needinfo?(dvander)
Since this is a WARP device it's not a true device reset, but a bug in WARP where attempting to create a shared texture will result in GetDeviceRemovedReason returning weird values.
(In reply to Matt Woodrow (:mattwoodrow) from comment #34) > Can someone please test this build: > http://ftp.mozilla.org/pub/mozilla.org/firefox/try-builds/mwoodrow@mozilla. > com-1afc1422b182/try-win32/ Looks fine from here. Tested on Win7 x64 on ThinkPad laptop (no VM) with default profile and E10S.
(In reply to Matt Woodrow (:mattwoodrow) from comment #34) > Can someone please test this build: > http://ftp.mozilla.org/pub/mozilla.org/firefox/try-builds/mwoodrow@mozilla. > com-1afc1422b182/try-win32/ Looks good here too. Win 7 Ultimate x64 (no VM) w/ e10s enabled.
Attachment #8625958 - Flags: review?(bas) → review+
(In reply to Matt Woodrow (:mattwoodrow) from comment #34) > Can someone please test this build: > http://ftp.mozilla.org/pub/mozilla.org/firefox/try-builds/mwoodrow@mozilla. > com-1afc1422b182/try-win32/ Seems to work as expected on my Windows 7 professional 64 bit (non VM) on both graphics cards.
Black tabs started happening here on the latest couple of nightlies, I restored the Firefox profile and I can confirm it only happens _when multi-process is enabled_ and on this computer for which I'll provide the configuration. The html elements, buttons, etc are there and are clickable but the tab contents are rendered black. It also can happen with and without hardware acceleration enabled. It works fine on all my other computers. -Microsoft Windows 7 Professional x64 -Graphics Card: Intel(R) Q965/Q963 Express Chipset Family -Dual headed display -Firefox Developer Edition 40.0a2 (2015-05-25)
Here is my about:support Graphics for my Windows 7 x64 no VM desktop. Same problem for the last 4 builds. Graphics Adapter Description Intel(R) G41 Express Chipset Adapter Drivers igdumd64 igd10umd64 igdumdx32 igd10umd32 Adapter RAM Unknown Asynchronous Pan/Zoom none Device ID 0x2e32 DirectWrite Enabled false (6.2.9200.17292) Driver Date 2-11-2011 Driver Version 8.15.10.2302 GPU #2 Active false GPU Accelerated Windows 2/2 Direct3D 11 WARP (OMTC) Subsys ID 304f17aa Supports Hardware H264 Decoding false Vendor ID 0x8086 WebGL Renderer Google Inc. -- ANGLE (Intel(R) G41 Express Chipset Direct3D9Ex vs_3_0 ps_3_0) windowLayerManagerRemote true AzureCanvasBackend skia AzureContentBackend cairo AzureFallbackCanvasBackend cairo AzureSkiaAccelerated 0
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla41
Found this fixed on todays build, User Agent Mozilla/5.0 (Windows NT 6.1; rv:42.0) Gecko/20100101 Firefox/42.0 Build ID 20150629134017 Marking this as VERIFIED FIXED now
Status: RESOLVED → VERIFIED
QA Whiteboard: [Bugday-20150701]
Whiteboard: [Bugday-20150701]
What happened? When I tested the fixes (comment 36) it looked good, working properly. Today I update to Developer 40.0a2 (2015-06-29)and it's back. Enable es10 and nothing but black tabs. Win 7 Ultimate x64 - No VM.
(In reply to dsylvest58 from comment #44) > What happened? When I tested the fixes (comment 36) it looked good, working > properly. Today I update to Developer 40.0a2 (2015-06-29)and it's back. You tested Firefox 41 in comment 36. The patch is not in Firefox 40.
(In reply to Anthony Hughes, QA Mentor (:ashughes) from comment #45) > (In reply to dsylvest58 from comment #44) > > What happened? When I tested the fixes (comment 36) it looked good, working > > properly. Today I update to Developer 40.0a2 (2015-06-29)and it's back. > > You tested Firefox 41 in comment 36. The patch is not in Firefox 40. You're absolutely right, my bad. I was on my laptop and 40 is working properly with es10 so assumed it had been back-patched there too. Then I realized the laptop is a 32-bit box and perhaps this is Win x64 specific. I'll just disable on desktop until Developer hits 41. My mistake for a-s-s-u-m-i-n-g [slinks away].
See Also: → 1178823
See Also: → 1192541
Depends on: 1197639
No longer depends on: 1197639
I still have this problem on newest Nightly. Should I reopen this bug or fire another ticket?
About:support information. Graphics Adapter Description Intel(R) HD Graphics 3000 Adapter Drivers igdumd64 igd10umd64 igd10umd64 igdumd32 igd10umd32 igd10umd32 Adapter RAM Unknown Asynchronous Pan/Zoom wheel input enabled ClearType Parameters Gamma: 2200 Pixel Structure: R ClearType Level: 100 Enhanced Contrast: 200 Device ID 0x0116 Direct2D Enabled true DirectWrite Enabled true (10.0.10586.0) Driver Date 10-31-2015 Driver Version 10.17.10.4229 GPU #2 Active false GPU Accelerated Windows 1/1 Direct3D 11 (OMTC) Subsys ID 167f103c Supports Hardware H264 Decoding Yes Vendor ID 0x8086 windowLayerManagerRemote true AzureCanvasBackend direct2d 1.1 AzureContentBackend direct2d 1.1 AzureFallbackCanvasBackend cairo AzureSkiaAccelerated 0
(In reply to Benjamin Peng from comment #47) > I still have this problem on newest Nightly. Should I reopen this bug or fire another ticket? Please file a new bug report, thank you.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: